final cv in html

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
 				<article>
 					<h2>Βραβείο Unesco</h2>
 					<p class="subDetails">2003</p>
-					<p>Βραβείο στον παγκόσμιο διαγωνισμό της Unesco με θέμα: "</p>
+					<p>Βραβείο σε παγκόσμιο διαγωνισμό της Unesco στο Πανεπιστήμιο Μακεδονίας στη Θεσσαλονίκη</p>
 				</article>
 				
 				<article>
@@ -148,7 +148,7 @@
 	</div>
 	
 	<div class="footer">
-	<p class="padTop20 padBottom20"> testing</p> 
+	<p class="padTop20 padBottom20">Τριανταφυλλίδης Γιώργος | template by <a href="http://design.bi/gallery/responsive-htmlcss3-cv-template/">design.bi</a></p> 
 	</div>
 	
 </div>
